# aurum

./: .editorconfig  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs
src/core/: mod.rs
src/metrics/: mod.rs
src/plugins/: mod.rs
src/providers/: mod.rs
src/security/: mod.rs
src/utils/: error.rs  mod.rs
